--- a/timeseries_analyses/Make_Timeseries_Heatmaps.Rmd
+++ b/timeseries_analyses/Make_Timeseries_Heatmaps.Rmd
@@ -20,8 +20,8 @@ library(gplots)
 ```{r}
 behav=load_behav_data()
 wincorr=load_fmri_data('wincorr')
-rnaseq_wgcna=load_rnaseq_data()
-xvars=c('panas.positive','panas.negative','panas.fatigue','afterscan.Anxietyduringscan','afterscan.diastolic','afterscan.pulse','afterscan.systolic','morning.Sleepquality','morning.Soreness','prevevening.Alcohol','prevevening.Guthealth','prevevening.Psoriasisseverity','prevevening.Stress', 'prevevening.Timespentoutdoors','temp.mean',"email.LIWC_CDI","email.LIWC_negemo","email.LIWC_posemo",'zeo.zq')
+rnaseq_wgcna=load_rnaseq_data(limit_ME_to_enriched=TRUE)
+xvars=c('panas.positive','panas.negative','panas.fatigue','afterscan.Anxietyduringscan','afterscan.diastolic','afterscan.pulse','afterscan.systolic','morning.Sleepquality','morning.Soreness','prevevening.Alcohol','prevevening.Guthealth','prevevening.Psoriasisseverity','prevevening.Stress', 'prevevening.Timespentoutdoors','temp.mean',"email.LIWCcdi","email.LIWCnegemo","email.LIWCposemo",'zeo.zq')
 
 behav_keep=subset(behav,select=c(xvars,'date'))
 ```
@@ -50,6 +50,11 @@ xmar=8
 ymar=6
 
 heatmap.2(t(as.matrix(b)),trace='row',scale='row',margins=c(xmar,ymar),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=behav_names,labCol=behav_dates)
+
+pdf(file='/Users/poldrack/Dropbox/Documents/Papers/SelfTracking/figures/behav_heatmap.pdf',width=16,height=10)
+heatmap.2(t(as.matrix(b)),trace='row',scale='row',margins=c(10,16),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=behav_names,labCol=behav_dates)
+dev.off()
+
 ```
 
 #### Make heatmap for within-network connectivity
@@ -70,6 +75,11 @@ for (i in 2:length(wincorr $date)) {
 	}
 
 heatmap.2(t(as.matrix(w)),trace='row',scale='row',margins=c(xmar,ymar),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=wincorr_names,labCol=scan_dates,key=FALSE)
+
+pdf(file='/Users/poldrack/Dropbox/Documents/Papers/SelfTracking/figures/wincorr_heatmap.pdf',width=16,height=10)
+heatmap.2(t(as.matrix(w)),trace='row',scale='row',margins=c(10,16),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=wincorr_names,labCol=scan_dates,key=FALSE)
+dev.off()
+
 ```
 
 #### Make heatmap for WGCNA data
@@ -86,9 +96,13 @@ for (i in 2:length(rnaseq_wgcna$date)) {
 			draw_dates[i]=''
 		}
 	}
-rna_names=as.character(read.table('http://s3.amazonaws.com/openfmri/ds031/RNA-seq/module_descriptions.txt',sep='\t',header=FALSE)$V2)
 
-heatmap.2(t(as.matrix(rna)),trace='row',scale='row',margins=c(xmar,ymar),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=rna_names,labCol=draw_dates,key=FALSE)
+heatmap.2(t(as.matrix(rna)),trace='row',scale='row',margins=c(xmar,ymar),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=names(rna),labCol=draw_dates,key=FALSE)
+
+pdf(file='/Users/poldrack/Dropbox/Documents/Papers/SelfTracking/figures/wgcna_heatmap.pdf',width=16,height=10)
+heatmap.2(t(as.matrix(rna)),trace='row',scale='row',margins=c(10,16),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=names(rna),labCol=draw_dates,key=FALSE)
+
+dev.off()
 
 ```
 
