--- a/timeseries_analyses/timeseries_analyses.Rmd
+++ b/timeseries_analyses/timeseries_analyses.Rmd
@@ -260,6 +260,25 @@ output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
 
 ```
 
+#### Test specific hypothesis regarding psoriasis
+```{r message=FALSE,warning=FALSE,error=FALSE}
+vnames=c('psoriasis','immport')
+psoriasis=subset(behav,select=c(date,prevevening.Psoriasisseverity))
+if (file.exists(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))) {
+  print("loading existing file...")
+  d=read.table(paste(OUTPUT_DIR,sprintf('out.dat.%s_%s.txt',vnames[1],vnames[2]),sep='/'))
+  } else {d=est_bivariate_arima_model(immport,psoriasis,spacing='1 week')}
+```
+
+```{r  results="asis"}
+
+kable_wrap(d)
+output_results(d,vnames,OUTPUT_DIR=OUTPUT_DIR)
+
+```
+
+
+
 ####ImmPort immune genes vs within-module connectivity
 
 ```{r message=FALSE,warning=FALSE,error=FALSE}
